--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -3,3 +3,14 @@ width: 20%;
 font-family: 'Sedgwick Ave Display', cursive;
 }
 
+
+@media screen and (max-width: 1023px) {
+.inputsize {
+width: 100%;
+height: 40px;
+font-family: 'Sedgwick Ave Display', cursive;
+font-size: 20px;
+text-align: center;
+}
+}
+
