--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -60,6 +60,12 @@ box-shadow: 0px 4px 5px white ;
    
 }
 
+.admin{
+font-family: 'Sedgwick Ave Display', cursive;
+text-decoration: none;
+color: black;
+}
+
 
 
 
