--- a/src/components/CarteFut.css
+++ b/src/components/CarteFut.css
@@ -1,10 +1,13 @@
 
 
 
-.fut-player-card-team {
+.fut-player-card-team-perso {
 	
-	width: 420%;
-	height: 190px;
+	width: max(10vw, 6em, 80px);
+	height: 250px
+	;
+
+
 	
 	background-image: url(../assets/newcard.jpg);
 	display:flex;
@@ -18,209 +21,22 @@
 	
 }
 
-.fut-player-card-team:hover {
--ms-transform: scale(1.1); /* IE 9 */
--webkit-transform: scale(1.1); /* Safari 3-8 */
-transform: scale(1.1);
-}
+	.taille-carte{
+width: 100%;
+text-align: center;
+	}
 
-.player-card-top-team {
-	position: relative;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	color: black;
-	padding: 0 1.5rem;
-}
-
-.player-card-top-team .player-master-info-team {
-	position: absolute;
-	line-height: 2.2rem;
-	font-weight: 300;
-	padding: 1.5rem 0;
-	text-transform: uppercase;
-}
-
-.player-card-top-team .player-master-info-team .player-rating-team {
-font-size: 0.7rem;
-}
-
-.player-card-top-team .player-master-info-team .player-position-team {
-	font-size: 0.7rem;
-}
-
-.player-card-top-team .player-master-info-team .player-nation-team {
-	display: block;
-	
-	height: 25px;
-	margin: 0.3rem 0;
-}
-
-.player-card-top-team .player-master-info-team .player-nation-team img {
-	
-	height: 100%;
-	-o-object-fit: contain;
-	object-fit: contain;
-}
-
-.player-card-top-team .player-master-info-team .player-club-team {
-	display: block;
-	
-	height: 40px;
-}
-
-.player-card-top-team .player-master-info-team .player-club-team img {
-	
-	height: 100%;
-	-o-object-fit: contain;
-	object-fit: contain;
-}
-
-.player-card-top-team .player-picture-team {
-
-	height: 200px;
-	margin: 0 auto;
-	overflow: hidden;
-}
-.player-card-top-team .player-picture-team img {
-	width: 100%;
-	height: 100%;
-	-o-object-fit: contain;
-	object-fit: contain;
-	position: relative;
-	right: -1.5rem;
-	bottom: 0;
-}
-
-.player-card-top-team .player-picture-team .player-extra-team {
-	position: absolute;
-	right: 0;
-	bottom: -0.5rem;
-	overflow: hidden;
-	font-size: 0.7rem;
-	font-weight: 700;
-	text-transform: uppercase;
-	width: 100%;
-	height: 2rem;
-	padding: 0 1.5rem;
-	text-align: right;
-	background: none;
-}
-
-.player-card-top-team .player-picture-team .player-extra-team span {
-	margin-left: 0.6rem;
-	text-shadow: 2px 2px #333;
-}
-
-
-.player-info-team {
-	display: block;
-	
-    
-	color: black;
-	width: 90%;
-	margin: 0 auto;
-	height: auto;
-	position: relative;
-	z-index: 2;
-}
+	.player-info-team{
+		text-align: center;
+		
+	}
 
 .player-info-team .player-name-team {
-width: 100%;
-	display: block;
-	text-align: center;
+
+	
+	
 	/* font size du nom du joueur-------------------- */
-	font-size: 0.7rem;
-	
-	size: 50%;
-	text-transform: uppercase;
-	
-	padding-bottom: 0.3rem;
-
-    color: white;
-	/* position prénom----------- */
-    margin-left: -23px;
-    padding-top: 26px;
-}
-
-
- .player-info-team .player-name-team span {
-	display: block;
-	text-shadow: 2px 2px #111;
-}
-
- .player-info-team .player-features-team {
-	
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-}
-
-
-
-.player-info-team{
-
+	font-size:max(1.3vw, 0em, 10px);
 
 }
 
-.player-info-team .player-features-team .player-features-col-team {
-	border-right: 2px solid rgba(233, 204, 116, 0.1);
-padding-left: 10px;
-padding-right: 10px;
-  
-    color: white;
-}
-
-.player-info-team .player-features-team .player-features-col-team span {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	font-size: 1.0rem;
-	text-transform: uppercase;
-}
-
-.player-info-team .player-features-team .player-features-col-team span .player-feature-value-team {
-	margin-right: 0.3rem;
-	font-weight: 700;
-}
-
-.player-info-team .player-features-team .player-features-col-team span .player-feature-title-team {
-	font-weight: 300;
-}
-
-.player-info-team .player-features-team .player-features-col-team:last-child {
-	border: 0;
-}
-
-
-
-/* Modifie positionnement de la position du joueur  */
-.player-position-team{
-  font-weight: bolder;
-  margin-left: 8px;
-  margin-top: -15px;
-  color: white;
-}
-
-
-
-
-/* Modifie positionnement de la note  */
-.player-rating-team{
-  margin-left: 10px;
-  margin-top: -70px;
-  color: white;
-  
-}
-
-
-/* Modifie font des valeurs bas de carte*/
-.player-feature-value-team{
-    font-size: 0.5rem;
-}
-.player-feature-title-team{
-    font-size: 0.5rem;
-}
