--- a/src/pages/ActuAdmin.css
+++ b/src/pages/ActuAdmin.css
@@ -21,4 +21,11 @@
     margin-left: 45%;
     margin-top: 2%;
     margin-bottom: 2%;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
+}
+
+.actu-fifa{
+
 }
