--- a/src/pages/GestionUtilisateurs.css
+++ b/src/pages/GestionUtilisateurs.css
@@ -15,7 +15,7 @@
 .infos{
     display: flex;
     justify-content: space-around;
-   
+    font-family: 'Sedgwick Ave Display', cursive;
 }
 
 .pseudo-titre{
