--- a/src/pages/NouvelArticle.css
+++ b/src/pages/NouvelArticle.css
@@ -1,3 +1,10 @@
+.nouvel-article{
+     height:100% ;
+          background-image: url(../assets/marble.jpg);
+   background-size: cover;
+   background-attachment:fixed;   
+}
+
 .contenu{
     margin-left: 25%;
     margin-top: 2%;
@@ -7,6 +14,10 @@
     margin-left: 45%;
     width: 7em;
     margin-bottom: 2%;
+    border-radius: 10px;
+    color: white;
+    background: black;
+      font-family: 'Sedgwick Ave Display', cursive;
 }
 
 .area{
@@ -15,5 +26,10 @@
 }
 
 .article-titre{
-    margin-top: 2%;
+
+}
+
+.container-form{
+    padding-top: 2%;
+    
 }
